--- a/ContosoUniversityTARpe21/appsettings.json
+++ b/ContosoUniversityTARpe21/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=ContosoUniversity;Trusted_Connection=True;MultipleActiveResultSets=True"
+    "DefaultConnection": "Server=DESKTOP-KPKLE7Q;Database=ContosoUniversity;Trusted_Connection=True;MultipleActiveResultSets=True"
   },
   "Logging": {
     "LogLevel": {
